<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coders.tourism.Ui.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/fontstyle"
                android:id="@+id/logo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"

                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_login"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ionputtext"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"


                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:fontFamily="@font/fontstyle"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ionputtext"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:errorEnabled="true"


                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:paddingStart="10dp"
                android:fontFamily="@font/fontstyle"
                android:id="@+id/text_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_password"
                android:layout_marginRight="10dp"
                android:text="@string/Forget_Password"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_forgetpassword"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="20dp"

                >

                <com.balysv.materialripple.MaterialRippleLayout

                    android:id="@+id/riple_login"
                    style="riple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <Button
                        android:fontFamily="@font/fontstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:padding="5dp"
                        android:text="@string/Login"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="@font/fontstyle"
                android:id="@+id/text_resister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_login"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/Need_New_Account"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_LoginUsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_resister"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/OrLoginUsingYour"
                android:fontFamily="@font/fontstyle"
                android:textSize="15sp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_LoginUsing"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:elevation="10dp"
                app:cardCornerRadius="20dp"

                >

                <com.balysv.materialripple.MaterialRippleLayout

                    android:id="@+id/riple_login_phone"
                    style="riple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <Button

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:drawableLeft="@drawable/phone"
                        android:padding="5dp"
                        android:text="@string/Phone"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/fontstyle"
                        />


                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


    </ScrollView>
</RelativeLayout>